# magi

./: .gitignore  Dockerfile  Makefile  README.md  app.js  db.js  docker-compose.yml  example.env  main.py  package-lock.json  package.json  pyproject.toml  sim.py  sim2.py  simulate.py  table_schemas.sql  var.py
crud/: fun.py  funcs.py  get.py  new.py
pkg/: __init__.py
pkg/crud/: __init__.py  fun.py  get.py  new.py
pkg/utils/: __init__.py  database.py  lib.py  logger.py  models.py  schemas.py
routes/: equity.js  equity.py  websocket.py
utils/: crud.js  db.py  lib.py  logger.py  models.py  schemas.js  schemas.py
utils/database/: db.js  table_schemas.sql
ynp/: index.js  package.json  schemas.js
ynp/crud/: crud.js  discord.js  main.js
ynp/src/: func.js  schema.js  utils.js
ynp/src/crud/: add.js  get.js
