[project]
name = "magi-py"
version = "0.1.0"
description = "magi in python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncmy>=0.2.10",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "logger>=1.4",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
